<resources>
    <string name="app_name">Memorabilia</string>
    <string name="welcome">Welcome to Memorabilia!</string>
    <string name="button_Currently_Reading">Currently Reading</string>
    <string name="button_MyBooks">MyBooks</string>
    <string name="button_Want_To_Read">Want To Read</string>
    <string name="button_Finished_Reading">Finished Reading</string>
    <string name="recommended_for_you">Recommended for You</string>
    <string name="welcome_text">Welcome to Memorabilia</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_register">Let\'s get started!</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="title_login">Login to Memorabilia</string>
    <string name="message_login">Please log in to continue your reading journey.</string>
    <string name="Currently_reading">List of books, you’re currently reading!</string>
    <string name="Currently_reading_title">Currently Reading</string>
    <string name="Finished_reading_title">Finished Reading</string>
    <string name="Finished_reading">Yay! Here are your finished books!</string>
    <string name="Want_to_read_title">Want To Read</string>
    <string name="Want_to_read">List of books, you curious about!</string>
    <string name="title_rv">Title</string>
    <string name="author_rv">Author</string>
    <string name="profile_title">Profile</string>
    <string name="name_profile">Name</string>
    <string name="theme_profile">Theme</string>
    <string name="changetheme">Change Theme</string>
    <string name="about">Information</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="setting_title">Settings</string>
</resources>