<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/ThemeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/theme_profile"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/Profileline"
        android:layout_width="70dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@color/lightRed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ThemeTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ThemeButton"
        style="@style/CustomMaterialButton1"
        android:layout_width="292dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/changetheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Profileline" />

    <TextView
        android:id="@+id/AboutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/about"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ThemeButton" />

    <View
        android:id="@+id/Aboutline"
        android:layout_width="70dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@color/lightRed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AboutTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/AboutButton"
        style="@style/CustomMaterialButton1"
        android:layout_width="292dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/about_us"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Aboutline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ContactButton"
        style="@style/CustomMaterialButton1"
        android:layout_width="292dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="1dp"
        android:text="@string/contact_us"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AboutButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
